--- a/sign_up/sign_up.html
+++ b/sign_up/sign_up.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="lv">
     <meta charset="utf-8">
     <head>
-        <title>Balķis Iekšā</title>
+        <title>Zīme Augšā</title>
 
     </head>
 </html>
