--- a/index/index.html
+++ b/index/index.html
@@ -17,7 +17,7 @@
                 <a class="AccountHyperlink" id="LoginHyperlink" href="../login/login.html">
                     Login
                 </a>
-                <a class="AccountHyperlink" id="SignUpHyperlink">
+                <a class="AccountHyperlink" id="SignUpHyperlink" href="../sign_in/sign_in.html">
                     Sign Up
                 </a>
             </div>
