--- a/index/index.html
+++ b/index/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8">
     <link href="index.css" rel="stylesheet">
     <link href="../common.css" rel="stylesheet">
-    <script src="index.js"></script>
+    <script src="../common.js"></script>
     <head>
         <title>Pazaudētās mantas</title>
     </head>
     <body>
         <div id="Main">
-            <div id="TopPanel" onmouseover="OnElementHover(this)" onmouseleave="OnElementUnHover(this)" onanimationend="OnTopPanelAnimationEnd(this)">
+            <div id="TopPanel" onmouseenter="OnTopPanelHoverEvent(this)" onmouseleave="OnTopPanelUnHoverEvent(this)">
                 <p id="TopPanelLoginCover">
                     L o g i n
                 </p>
                 <a class="AccountHyperlink" id="LoginHyperlink" href="../login/login.html">
                     Login
                 </a>
-                <a class="AccountHyperlink" id="SignUpHyperlink" href="../sign_in/sign_in.html">
+                <a class="AccountHyperlink" id="SignUpHyperlink" href="../sign_up/sign_up.html">
                     Sign Up
                 </a>
             </div>
