--- a/login/login.html
+++ b/login/login.html
@@ -4,6 +4,23 @@
     <meta charset="utf-8">
     <head>
         <title>Balķis Iekšā</title>
-
+        <link href="../common.css" rel="stylesheet">
+        <script src="../common.js"></script>
     </head>
+    <body>
+        <div id="Main">
+            <div id="TopPanel" onmouseenter="OnTopPanelHoverEvent(this)" onmouseleave="OnTopPanelUnHoverEvent(this)">
+                <p id="TopPanelLoginCover">
+                    L o g i n
+                </p>
+                <a class="AccountHyperlink" id="LoginHyperlink" href="../login/login.html">
+                    Login
+                </a>
+            </div>
+            <div id="MainPanel">
+            </div>
+            <div id="BottomInfoPanel">
+            </div>
+        </div>
+    </body>
 </html>
