--- a/index/index.html
+++ b/index/index.html
@@ -9,23 +9,21 @@
         <title>Pazaudētās mantas</title>
     </head>
     <body>
-        <div id="Main">
-            <div id="TopPanel" onmouseenter="OnTopPanelHoverEvent(this)" onmouseleave="OnTopPanelUnHoverEvent(this)">
-                <p id="TopPanelLoginCover">
-                    L o g i n
-                </p>
-                <a class="AccountHyperlink" id="LoginHyperlink" href="../login/login.html">
-                    Login
-                </a>
-                <a class="AccountHyperlink" id="SignUpHyperlink" href="../sign_up/sign_up.html">
-                    Sign Up
-                </a>
-            </div>
-            <div id="MainPanel">
-    
-            </div>
-            <div id="BottomInfoPanel">
-            </div>
+        <div id="TopPanel" onmouseenter="OnTopPanelHoverEvent(this)" onmouseleave="OnTopPanelUnHoverEvent(this)">
+            <p id="TopPanelLoginCover">
+                Baļķis iekšā
+            </p>
+            <a class="AccountHyperlink" id="LoginHyperlink" href="../login/login.html">
+                Baļķis iekšā
+            </a>
+            <a class="AccountHyperlink" id="SignUpHyperlink" href="../sign_up/sign_up.html">
+                Zīme augšā
+            </a>
+        </div>
+        <div id="MainPanel">
+
+        </div>
+        <div id="BottomInfoPanel">
         </div>
     </body>
 </html>
