--- a/login/login.html
+++ b/login/login.html
@@ -10,9 +10,7 @@
     </head>
     <body>
         <div id="TopPanel" onmouseenter="OnTopPanelHoverEvent(this)" onmouseleave="OnTopPanelUnHoverEvent(this)">
-            <div id="BackToIndexButton">
-
-            </div>
+            <div id="BackToIndexButton" onclick="OnHomeButtonClickEvent(this)"></div>
         </div>
         <div id="LoginDiv">
             <p id="CreateAccountText">Baļķot iekšā</p>
@@ -21,7 +19,6 @@
             <input class="CreateAccountStringInput" id="PasswordInput" type="password" spellcheck="false" autocapitalize="false" autocomplete="false"
                 placeholder="Parole">
         </div>
-        <div id="BottomInfoPanel">
-        </div>
+        <div id="BottomInfoPanel"></div>
     </body>
 </html>
