--- a/index/index.html
+++ b/index/index.html
@@ -10,15 +10,17 @@
     </head>
     <body>
         <div id="TopPanel" onmouseenter="OnTopPanelHoverEvent(this)" onmouseleave="OnTopPanelUnHoverEvent(this)">
-            <p id="TopPanelLoginCover">
+            <p id="TopPanelLoginCover"><!--AAA-->
                 Baļķis iekšā
             </p>
+            
             <a class="AccountHyperlink" id="LoginHyperlink" href="../login/login.html">
                 Baļķis iekšā
             </a>
             <a class="AccountHyperlink" id="SignUpHyperlink" href="../sign_up/sign_up.html">
                 Zīme augšā
             </a>
+            <div id="MainDiv"><p id="MyParagraph">This is a paragraph</p></div>"
         </div>
         <div id="BottomInfoPanel">
         </div>
