--- a/login/login.html
+++ b/login/login.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="TopPanel" onmouseenter="OnTopPanelHoverEvent(this)" onmouseleave="OnTopPanelUnHoverEvent(this)">
-            <div id="BackToIndexButton" onclick="OnHomeButtonClickEvent(this)"></div>
+            <a id="BackToIndexButton" href="../index/index.html" target="_self"></a>
         </div>
         <div id="LoginDiv">
             <p id="CreateAccountText">Baļķot iekšā</p>
