--- a/404/404.html
+++ b/404/404.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="TopPanel" onmouseenter="OnTopPanelHoverEvent(this)" onmouseleave="OnTopPanelUnHoverEvent(this)">
-            <div id="BackToIndexButton" onclick="OnHomeButtonClickEvent(this)"></div>
+            <a id="BackToIndexButton" href="../index/index.html" target="_self"></a>
             <p id="TopPanelLoginCover">
                 Baļķis iekšā
             </p>
