Basically no changes at all, right?

--- a/index/index.html
+++ b/index/index.html
@@ -10,17 +10,16 @@
     </head>
     <body>
         <div id="TopPanel" onmouseenter="OnTopPanelHoverEvent(this)" onmouseleave="OnTopPanelUnHoverEvent(this)">
-            <p id="TopPanelLoginCover"><!--AAA-->
+            <p id="TopPanelLoginCover">
                 Baļķis iekšā
             </p>
-            
-            <a class="AccountHyperlink" id="LoginHyperlink" href="../login/login.html">
+            <a class="AccountHyperlink" id="LoginHyperlink" href="../login/login.html" disabled>
                 Baļķis iekšā
             </a>
-            <a class="AccountHyperlink" id="SignUpHyperlink" href="../sign_up/sign_up.html">
+            <a class="AccountHyperlink" id="SignUpHyperlink" href="../sign_up/sign_up.html" disabled>
                 Zīme augšā
             </a>
-            <div id="MainDiv"><p id="MyParagraph">This is a paragraph</p></div>"
+            <div id="MainDiv"></div>
         </div>
         <div id="BottomInfoPanel">
         </div>
