Tiny Tiny Changes

--- a/sign_up/sign_up.html
+++ b/sign_up/sign_up.html
@@ -6,4 +6,9 @@
         <title>Zīme Augšā</title>
 
     </head>
+    <body>
+        <div id="TopPanel" onmouseenter="OnTopPanelHoverEvent(this)" onmouseleave="OnTopPanelUnHoverEvent(this)"></div>
+
+        <div></div>
+    </body>
 </html>
