--- a/index/index.html
+++ b/index/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
 <html lang="lv">
-    <meta charset="utf-8">
-    <link href="index.css" rel="stylesheet">
-    <link href="../common.css" rel="stylesheet">
-    <script src="../common.js"></script>
     <head>
+        <meta charset="utf-8">
+        <link href="index.css" rel="stylesheet">
+        <link href="../common.css" rel="stylesheet">
+        <script src="../common.js"></script>
         <title>Pazaudētās mantas</title>
     </head>
     <body>
@@ -13,13 +13,12 @@
             <p id="TopPanelLoginCover">
                 Baļķis iekšā
             </p>
-            <a class="AccountHyperlink" id="LoginHyperlink" href="../login/login.html" disabled>
+            <a class="AccountHyperlink" id="LoginHyperlink" href="../login/login.html">
                 Baļķis iekšā
             </a>
-            <a class="AccountHyperlink" id="SignUpHyperlink" href="../sign_up/sign_up.html" disabled>
+            <a class="AccountHyperlink" id="SignUpHyperlink" href="../sign_up/sign_up.html">
                 Zīme augšā
             </a>
-            <div id="MainDiv"></div>
         </div>
         <div id="BottomInfoPanel">
         </div>
