--- a/source/index/index.html
+++ b/source/index/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>LTT</title>
-        <link  rel="stylesheet" href="index.css">
+        <link  rel="stylesheet" href="commonn.css">
     </head>
     <body>
         <div id="TopPanel" class="WidePanel"></div>
